styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  *,
  *::after,
  *::before {
    margin: 0;
    padding: 0;
  }

  html {
    -webkit-tap-highlight-color: transparent;
  }

  body {
    overflow-x: hidden;
    font-weight: 400;
    min-height: 100vh;
    line-height: 1;
  }
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  transition: background-color 5000s;
  -webkit-text-fill-color: #fff !important;
}

.hide-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

.ut-animation {
  @apply transition-all duration-200;
}

